laborations/lab1/testsuite/bad/bad030.cc
int foo(&int) {
	return x;
}
